# securepremium

./: .gitignore  API_REFERENCE.md  API_REST_REFERENCE.md  CLI_GUIDE.md  CLI_IMPLEMENTATION.md  CLI_QUICKSTART.md  CLI_SUMMARY.md  COMPLETION_REPORT.md  DELIVERABLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.py  README.md  STORAGE_COMPLETE.md  STORAGE_MODULE.md  STORAGE_QUICK_REFERENCE.md  example_devices.csv  example_storage.py  example_storage_simple.py  example_usage.py  pyproject.toml  pytest.ini  requirements.txt  securepremium_cli.py  setup.cfg  setup.py
.github/: copilot-instructions.md
securepremium/: __init__.py
securepremium/api/: __init__.py  app.py  schemas.py
securepremium/cli/: __init__.py  main.py
securepremium/core/: __init__.py  premium_engine.py  risk_calculator.py
securepremium/integration/: fingerprinting.py
securepremium/models/: __init__.py  device_scorer.py
securepremium/network/: __init__.py  reputation_network.py
securepremium/pricing/: __init__.py  premium_model.py
securepremium/storage/: __init__.py  database.py  models.py  repositories.py  schema.py  utils.py
securepremium/utils/: __init__.py  helpers.py
tests/: __init__.py  test_api.py  test_cli.py  test_device_scorer.py  test_integration_fingerprinting.py  test_premium_engine.py  test_premium_model.py  test_reputation_network.py  test_risk_calculator.py  test_storage.py  test_utils.py
