[metadata]
name = securepremium
version = 0.1.0

[options]
packages = find:
python_requires = >=3.9

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
ignore = E203, W503

[isort]
profile = black
line_length = 100
multi_line_mode = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
